tests/baselines/reference/isolatedModulesAmbientConstEnum.errors.txt
tests/cases/compiler/file1.ts(1,20): error TS1209: Ambient const enums are not allowed when the '--isolatedModules' flag is provided.


==== tests/cases/compiler/file1.ts (1 errors) ====
    declare const enum E { X = 1}
                       ~
!!! error TS1209: Ambient const enums are not allowed when the '--isolatedModules' flag is provided.
    export var y;